crates/sqlcx-core/src/generator/go/snapshots/sqlcx_core__generator__go__database_sql__tests__go_database_sql_sqlite_queries.snap
---
source: crates/sqlcx-core/src/generator/go/database_sql.rs
expression: content
---
// Code generated by sqlcx. DO NOT EDIT.
package db

import (
	"context"
	"database/sql"
	"time"
)

const getUserSQL = "SELECT * FROM users WHERE id = ?"

type GetUserRow struct {
	Id int64 `db:"id" json:"id"`
	Name string `db:"name" json:"name"`
	Email string `db:"email" json:"email"`
	Bio *string `db:"bio" json:"bio"`
	Status string `db:"status" json:"status"`
	Tags *[]string `db:"tags" json:"tags"`
	CreatedAt time.Time `db:"created_at" json:"created_at"`
}

func (q *Queries) GetUser(ctx context.Context, id int64) (*GetUserRow, error) {
	row := q.db.QueryRowContext(ctx, getUserSQL, id)
	var i GetUserRow
	err := row.Scan(&i.Id, &i.Name, &i.Email, &i.Bio, &i.Status, &i.Tags, &i.CreatedAt)
	if err == sql.ErrNoRows {
		return nil, nil
	}
	if err != nil {
		return nil, err
	}
	return &i, nil
}

const listUsersSQL = "SELECT id, name, email FROM users WHERE name ILIKE ?"

type ListUsersRow struct {
	Id int64 `db:"id" json:"id"`
	Name string `db:"name" json:"name"`
	Email string `db:"email" json:"email"`
}

func (q *Queries) ListUsers(ctx context.Context, name string) ([]ListUsersRow, error) {
	rows, err := q.db.QueryContext(ctx, listUsersSQL, name)
	if err != nil {
		return nil, err
	}
	defer rows.Close()
	var items []ListUsersRow
	for rows.Next() {
		var i ListUsersRow
		if err := rows.Scan(&i.Id, &i.Name, &i.Email); err != nil {
			return nil, err
		}
		items = append(items, i)
	}
	return items, rows.Err()
}

const createUserSQL = "INSERT INTO users (name, email, bio) VALUES (?, ?, ?)"

func (q *Queries) CreateUser(ctx context.Context, name string, email string, bio string) error {
	_, err := q.db.ExecContext(ctx, createUserSQL, name, email, bio)
	return err
}

const deleteUserSQL = "DELETE FROM users WHERE id = ?"

type DeleteUserResult struct {
	RowsAffected int64
}

func (q *Queries) DeleteUser(ctx context.Context, id int64) (*DeleteUserResult, error) {
	result, err := q.db.ExecContext(ctx, deleteUserSQL, id)
	if err != nil {
		return nil, err
	}
	affected, err := result.RowsAffected()
	if err != nil {
		return nil, err
	}
	return &DeleteUserResult{RowsAffected: affected}, nil
}

const listUsersByDateRangeSQL = "SELECT * FROM users WHERE created_at > ? AND created_at < ?"

type ListUsersByDateRangeRow struct {
	Id int64 `db:"id" json:"id"`
	Name string `db:"name" json:"name"`
	Email string `db:"email" json:"email"`
	Bio *string `db:"bio" json:"bio"`
	Status string `db:"status" json:"status"`
	Tags *[]string `db:"tags" json:"tags"`
	CreatedAt time.Time `db:"created_at" json:"created_at"`
}

func (q *Queries) ListUsersByDateRange(ctx context.Context, start_date time.Time, end_date time.Time) ([]ListUsersByDateRangeRow, error) {
	rows, err := q.db.QueryContext(ctx, listUsersByDateRangeSQL, start_date, end_date)
	if err != nil {
		return nil, err
	}
	defer rows.Close()
	var items []ListUsersByDateRangeRow
	for rows.Next() {
		var i ListUsersByDateRangeRow
		if err := rows.Scan(&i.Id, &i.Name, &i.Email, &i.Bio, &i.Status, &i.Tags, &i.CreatedAt); err != nil {
			return nil, err
		}
		items = append(items, i)
	}
	return items, rows.Err()
}
